# label_tools_for_darknet

./: CMakeLists.txt  README.md  my_tools.cpp  my_tools.h
config/: label_tools_checker.yaml  label_tools_image.yaml  label_tools_image_v2.yaml  label_tools_video.yaml
include/: utils.cpp  utils.h
include/label_tools_image/: common.h  my_image.cpp  my_image.h  my_tools.cpp  my_tools.h
include/label_tools_image_v2/: common.h  my_image.cpp  my_image.h  my_tools.cpp  my_tools.h
include/label_tools_video/: common.h  my_image.cpp  my_image.h  my_tools.cpp  my_tools.h  yaml_loader.cpp  yaml_loader.h
src/: label_tools_checker.cpp  label_tools_image.cpp  label_tools_image_v2.cpp  label_tools_video.cpp
